2009-07-14 20:02-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/Foundation/NSOperation.h
	* Source/NSOperation.m: Added initial implementation of
	NSOperationQueue.

2009-07-13 14:15-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/Foundation/Foundation.h
	* Headers/Foundation/NSOperation.h
	* Source/GNUmakefile
	* Source/NSOperation.m: Initial implementation of NSOperation
	class.

2009-07-11 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSConcreteMapTable.m: Add some comments.
	* Source/NSConcreteHashTable.m: Dito
	* Headers/Additions/GNUstepBase/GSIMap.h: Make explicit that fields in
	enumerator are all big enough to hold pointers.

2009-07-04 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSProcessInfo.m: Add daignostic check.
	* Source/NSSocketPort.m: Make sure socklen_t is defined.
	Shoudl fix bug #26856

2009-06-30  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* configure.ac:
	* configure:
	* config/config.poll-dev.c: Add test to configure to avoid using
	the broken poll implementation on Mac OS X 10.4 and later, which
	does not support devices.

2009-06-24 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSXMLParser.m: ([-parse]) don't split whitespace strings
	at newline.

2009-06-19 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/win32/GSRunLoopCtxt.m: Fix error sending received event
	handle to watcher.  Had broken TCP/IP ports.

2009-06-19 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/Unicode.m: Fix incorrect attempt to free memory
	we shouldn't.  Should fix bug #26843

2009-06-16 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/win32/NSMessagePort.m: Don't use NSLog() to report error
	when writing to mailslot ... it's usually just that the remote
	end has terminated, so invalidating the port silently is better.
	* Source/GSFileHandle.m: Adjust code to deal with fstat() returning
	a failure on windows if the descriptor is a pipe/socket.

2009-06-13 Richard Frith-Macdonald <rfm@gnu.org>
