@@ -1,3 +1,15 @@
+2009-07-17 Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSOperation.m: Fix includes and text of comments at start
+	of document.
+
+2009-07-16 Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Headers/Foundation/NSOperation.h:
+	* Source/NSOperation.m:
+	Various changes for maintainability and coding standards ... nothing
+	which should effect functionality.
+	
 2009-07-14 20:02-EDT Gregory John Casamento <greg.casamento@gmail.com>
 
 	* Headers/Foundation/NSOperation.h
